<resources>
    <string name="app_name">Connect</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Appland">Connect</string>
    <string name="landdown">Buy , Sell  and Order</string>
    <string name="all">all</string>
    <string name="children">children</string>
    <string name="women">Women</string>
    <string name="men">Men</string>
    <string name="home">home</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
</resources>